--- a/index.html
+++ b/index.html
@@ -19,175 +19,203 @@
   <body>
     <!-- Шапка сайта -->
     <header>
-      <nav>
-        <a href="" class="logo"><span class="accent">Web</span>Studio</a>
+      <div class="container main-nav">
+        <nav class="nav">
+          <a href="" class="logo"><span class="accent">Web</span>Studio</a>
 
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="link current">Студия</a></li>
-          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
+          <ul class="site-nav list">
+            <li class="item">
+              <a href="./index.html" class="link current">Студия</a>
+            </li>
+            <li class="item">
+              <a href="./portfolio.html" class="link">Портфолио</a>
+            </li>
+            <li class="item"><a href="" class="link">Контакты</a></li>
+          </ul>
+        </nav>
+
+        <ul class="address-nav list">
+          <li class="item">
+            <a href="mailto:info@devstudio.com" class="link contact"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="item">
+            <a href="tel:+380961111111" class="link contact"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
-      </nav>
-
-      <ul class="address-nav list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="link contact"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="link contact">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
 
     <main>
       <!-- Герой -->
       <section class="hero">
-        <h1 class="hero-title">
-          Эффективные решения <br />
-          для вашего бизнеса
-        </h1>
-        <button type="button" class="btn-primary">Заказать услугу</button>
+        <div class="container hero-wrap">
+          <h1 class="hero-title">
+            Эффективные решения <br />
+            для вашего бизнеса
+          </h1>
+          <div class="btn-wrap">
+            <button type="button" class="btn-primary">Заказать услугу</button>
+          </div>
+        </div>
       </section>
 
       <!-- Преимущества -->
       <section class="section">
-        <h2 class="hidden-title">Преимущества</h2>
-        <ul class="feature-items list">
-          <li>
-            <h3 class="title">Внимание к деталям</h3>
-            <p class="text">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
+        <div class="container">
+          <h2 class="hidden-title">Преимущества</h2>
+          <ul class="feature-list list">
+            <li class="item item-list">
+              <h3 class="title">Внимание к деталям</h3>
+              <p class="text">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
 
-          <li>
-            <h3 class="title">Пунктуальность</h3>
-            <p class="text">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
+            <li class="item item-list">
+              <h3 class="title">Пунктуальность</h3>
+              <p class="text">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
 
-          <li>
-            <h3 class="title">Планирование</h3>
-            <p class="text">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
+            <li class="item item-list">
+              <h3 class="title">Планирование</h3>
+              <p class="text">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
 
-          <li>
-            <h3 class="title">Современные технологии</h3>
-            <p class="text">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+            <li class="item item-list">
+              <h3 class="title">Современные технологии</h3>
+              <p class="text">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Род деятельности -->
       <section class="section">
-        <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/features1.jpg"
-              alt="програмист работает"
-              width="370"
-            />
-          </li>
+        <div class="container">
+          <h2 class="section-title">Чем мы занимаемся</h2>
+          <ul class="img-list list">
+            <li class="item">
+              <img
+                src="./images/features1.jpg"
+                alt="програмист работает"
+                width="370"
+              />
+            </li>
 
-          <li>
-            <img
-              src="./images/features2.jpg"
-              alt="создание приложений"
-              width="370"
-            />
-          </li>
+            <li class="item">
+              <img
+                src="./images/features2.jpg"
+                alt="создание приложений"
+                width="370"
+              />
+            </li>
 
-          <li>
-            <img
-              src="./images/features3.jpg"
-              alt="графический дизайн"
-              width="370"
-            />
-          </li>
-        </ul>
+            <li class="item">
+              <img
+                src="./images/features3.jpg"
+                alt="графический дизайн"
+                width="370"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Члены команды -->
       <section class="section">
-        <h2 class="section-title">Наша команда</h2>
+        <div class="container members-wrap">
+          <h2 class="section-title members">Наша команда</h2>
 
-        <ul class="member-items list">
-          <li>
-            <img src="./images/member1.jpg" alt="мужчина в очках" width="270" />
-            <h3 class="name">Игорь Демьяненко</h3>
-            <p class="text">Product Designer</p>
-          </li>
+          <ul class="member-items list">
+            <li class="item">
+              <img
+                src="./images/member1.jpg"
+                alt="мужчина в очках"
+                width="270"
+              />
+              <h3 class="name">Игорь Демьяненко</h3>
+              <p class="text">Product Designer</p>
+            </li>
 
-          <li>
-            <img src="./images/member2.jpg" alt="девушка в очках" width="270" />
-            <h3 class="name">Ольга Репина</h3>
-            <p class="text">Frontend Developer</p>
-          </li>
+            <li class="item">
+              <img
+                src="./images/member2.jpg"
+                alt="девушка в очках"
+                width="270"
+              />
+              <h3 class="name">Ольга Репина</h3>
+              <p class="text">Frontend Developer</p>
+            </li>
 
-          <li>
-            <img
-              src="./images/member3.jpg"
-              alt="улыбающийся мужчина"
-              width="270"
-            />
-            <h3 class="name">Николай Тарасов</h3>
-            <p class="text">Marketing</p>
-          </li>
+            <li class="item">
+              <img
+                src="./images/member3.jpg"
+                alt="улыбающийся мужчина"
+                width="270"
+              />
+              <h3 class="name">Николай Тарасов</h3>
+              <p class="text">Marketing</p>
+            </li>
 
-          <li>
-            <img
-              src="./images/member4.jpg"
-              alt="мужчина с бородой в очках"
-              width="270"
-            />
-            <h3 class="name">Михаил Ермаков</h3>
-            <p class="text">UI Designer</p>
-          </li>
-        </ul>
+            <li class="item">
+              <img
+                src="./images/member4.jpg"
+                alt="мужчина с бородой в очках"
+                width="270"
+              />
+              <h3 class="name">Михаил Ермаков</h3>
+              <p class="text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- Подвал сайта -->
     <footer class="page-footer">
-      <a href="" class="logo footer"><span class="accent">Web</span>Studio</a>
+      <div class="container footer-wrap">
+        <a href="" class="logo footer"><span class="accent">Web</span>Studio</a>
 
-      <address>
-        <ul class="footer-items list">
-          <li>
-            <a
-              href="https://goo.gl/maps/wA7wwZKrXkQfANAAA"
-              target="blank"
-              rel="noopener noreferrer"
-              class="link address"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
+        <address>
+          <ul class="footer-items list">
+            <li class="item">
+              <a
+                href="https://goo.gl/maps/wA7wwZKrXkQfANAAA"
+                target="blank"
+                rel="noopener noreferrer"
+                class="link address"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
 
-          <li>
-            <a href="mailto:info@example.com" class="link contact"
-              >info@example.com</a
-            >
-          </li>
+            <li class="item">
+              <a href="mailto:info@example.com" class="link contact"
+                >info@example.com</a
+              >
+            </li>
 
-          <li>
-            <a href="tel:+380991111111" class="link contact"
-              >+38 099 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+            <li class="item">
+              <a href="tel:+380991111111" class="link contact"
+                >+38 099 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
