--- a/portfolio.html
+++ b/portfolio.html
@@ -18,189 +18,205 @@
   <body>
     <!-- Шапка сайта -->
     <header>
-      <nav>
-        <a href="" class="logo"><span class="accent">Web</span>Studio</a>
+      <div class="container main-nav">
+        <nav class="nav">
+          <a href="" class="logo"><span class="accent">Web</span>Studio</a>
 
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
+          <ul class="site-nav list">
+            <li class="item">
+              <a href="./index.html" class="link">Студия</a>
+            </li>
+            <li class="item">
+              <a href="./portfolio.html" class="link current">Портфолио</a>
+            </li>
+            <li class="item"><a href="" class="link">Контакты</a></li>
+          </ul>
+        </nav>
+
+        <ul class="address-nav list">
+          <li class="item">
+            <a href="mailto:info@devstudio.com" class="link contact"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="item">
+            <a href="tel:+380961111111" class="link contact"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
-      </nav>
-
-      <ul class="address-nav list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="link contact"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="link contact">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
 
     <main>
       <!-- Герой -->
       <section class="section">
-        <h1 class="hidden-title">Примеры работ</h1>
+        <div class="container">
+          <h1 class="hidden-title">Примеры работ</h1>
 
-        <ul class="filter-items list">
-          <li>
-            <button type="button" class="btn-filter current">Все</button>
-          </li>
-          <li>
-            <button type="button" class="btn-filter">Веб-сайты</button>
-          </li>
-          <li>
-            <button type="button" class="btn-filter">Приложения</button>
-          </li>
-          <li>
-            <button type="button" class="btn-filter">Дизайн</button>
-          </li>
-          <li>
-            <button type="button" class="btn-filter">Маркетинг</button>
-          </li>
-        </ul>
+          <div class="bnt-container">
+            <ul class="filter-items list">
+              <li>
+                <button type="button" class="btn-filter current">Все</button>
+              </li>
+              <li>
+                <button type="button" class="btn-filter">Веб-сайты</button>
+              </li>
+              <li>
+                <button type="button" class="btn-filter">Приложения</button>
+              </li>
+              <li>
+                <button type="button" class="btn-filter">Дизайн</button>
+              </li>
+              <li>
+                <button type="button" class="btn-filter">Маркетинг</button>
+              </li>
+            </ul>
+          </div>
 
-        <ul class="examples-items list">
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/web-tech.jpg"
-                class="image"
-                alt="фото сайта Технокряк"
-                width="370"
-              />
-              <h2 class="heading">Технокряк</h2>
-              <p class="name-filter text">Веб-сайт</p>
-            </a>
-          </li>
+          <div class="examples-container">
+            <ul class="examples-items list">
+              <li>
+                <a href="" class="link">
+                  <img
+                    src="./images/web-tech.jpg"
+                    class="image"
+                    alt="фото сайта Технокряк"
+                    width="370"
+                  />
+                  <h2 class="heading">Технокряк</h2>
+                  <p class="name-filter text">Веб-сайт</p>
+                </a>
+              </li>
 
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/desigh-poster.jpg"
-                alt="дизайн постера"
-                width="370"
-              />
-              <h2 class="heading">Постер New Orlean vs Golden Star</h2>
-              <p class="name-filter text">Дизайн</p>
-            </a>
-          </li>
+              <li>
+                <a href="" class="link">
+                  <img
+                    src="./images/desigh-poster.jpg"
+                    alt="дизайн постера"
+                    width="370"
+                  />
+                  <h2 class="heading">Постер New Orlean vs Golden Star</h2>
+                  <p class="name-filter text">Дизайн</p>
+                </a>
+              </li>
 
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/app-restaurant.jpg"
-                alt="приложение для ресторана"
-                width="370"
-              />
-              <h2 class="heading">Ресторан Seafood</h2>
-              <p class="name-filter text">Приложение</p>
-            </a>
-          </li>
+              <li>
+                <a href="" class="link">
+                  <img
+                    src="./images/app-restaurant.jpg"
+                    alt="приложение для ресторана"
+                    width="370"
+                  />
+                  <h2 class="heading">Ресторан Seafood</h2>
+                  <p class="name-filter text">Приложение</p>
+                </a>
+              </li>
 
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/project-prime.jpg"
-                alt="фото наушники"
-                width="370"
-              />
-              <h2 class="heading">Проект Prime</h2>
-              <p class="name-filter text">Маркетинг</p>
-            </a>
-          </li>
+              <li>
+                <a href="" class="link">
+                  <img
+                    src="./images/project-prime.jpg"
+                    alt="фото наушники"
+                    width="370"
+                  />
+                  <h2 class="heading">Проект Prime</h2>
+                  <p class="name-filter text">Маркетинг</p>
+                </a>
+              </li>
 
-          <li>
-            <a href="" class="link">
-              <img src="./images/boxes.jpg" alt="коробки" width="370" />
-              <h2 class="heading">Проект Boxes</h2>
-              <p class="name-filter text">Приложение</p>
-            </a>
-          </li>
+              <li>
+                <a href="" class="link">
+                  <img src="./images/boxes.jpg" alt="коробки" width="370" />
+                  <h2 class="heading">Проект Boxes</h2>
+                  <p class="name-filter text">Приложение</p>
+                </a>
+              </li>
 
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/web-inspirations.jpg"
-                alt="монитор с открытым сайтом"
-                width="370"
-              />
-              <h2 class="heading">Inspiration has no Borders</h2>
-              <p class="name-filter text">Веб-сайт</p>
-            </a>
-          </li>
+              <li>
+                <a href="" class="link">
+                  <img
+                    src="./images/web-inspirations.jpg"
+                    alt="монитор с открытым сайтом"
+                    width="370"
+                  />
+                  <h2 class="heading">Inspiration has no Borders</h2>
+                  <p class="name-filter text">Веб-сайт</p>
+                </a>
+              </li>
 
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/desing-limited.jpg"
-                alt="дизайн издания"
-                width="370"
-              />
-              <h2 class="heading">Издание Limited Edition</h2>
-              <p class="name-filter text">Дизайн</p>
-            </a>
-          </li>
+              <li>
+                <a href="" class="link">
+                  <img
+                    src="./images/desing-limited.jpg"
+                    alt="дизайн издания"
+                    width="370"
+                  />
+                  <h2 class="heading">Издание Limited Edition</h2>
+                  <p class="name-filter text">Дизайн</p>
+                </a>
+              </li>
 
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/project-lab.jpg"
-                alt="фото лейбла"
-                width="370"
-              />
-              <h2 class="heading">Проект LAB</h2>
-              <p class="name-filter text">Маркетинг</p>
-            </a>
-          </li>
+              <li>
+                <a href="" class="link">
+                  <img
+                    src="./images/project-lab.jpg"
+                    alt="фото лейбла"
+                    width="370"
+                  />
+                  <h2 class="heading">Проект LAB</h2>
+                  <p class="name-filter text">Маркетинг</p>
+                </a>
+              </li>
 
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/app-growing.jpg"
-                alt="фото приложения"
-                width="370"
-              />
-              <h2 class="heading">Growing Business</h2>
-              <p class="name-filter text">Приложение</p>
-            </a>
-          </li>
-        </ul>
+              <li>
+                <a href="" class="link">
+                  <img
+                    src="./images/app-growing.jpg"
+                    alt="фото приложения"
+                    width="370"
+                  />
+                  <h2 class="heading">Growing Business</h2>
+                  <p class="name-filter text">Приложение</p>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
     </main>
 
     <!-- Подвал сайта -->
     <footer class="page-footer">
-      <a href="" class="logo footer"><span class="accent">Web</span>Studio</a>
+      <div class="container">
+        <a href="" class="logo footer"><span class="accent">Web</span>Studio</a>
 
-      <address>
-        <ul class="footer-items list">
-          <li>
-            <a
-              href="https://goo.gl/maps/wA7wwZKrXkQfANAAA"
-              target="blank"
-              rel="noopener noreferrer"
-              class="link address"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
+        <address>
+          <ul class="footer-items list">
+            <li>
+              <a
+                href="https://goo.gl/maps/wA7wwZKrXkQfANAAA"
+                target="blank"
+                rel="noopener noreferrer"
+                class="link address"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
 
-          <li>
-            <a href="mailto:info@example.com" class="link contact"
-              >info@example.com</a
-            >
-          </li>
+            <li>
+              <a href="mailto:info@example.com" class="link contact"
+                >info@example.com</a
+              >
+            </li>
 
-          <li>
-            <a href="tel:+380991111111" class="link contact"
-              >+38 099 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+            <li>
+              <a href="tel:+380991111111" class="link contact"
+                >+38 099 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
