Added new paddings and styles

--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
       </section>
 
       <!-- Члены команды -->
-      <section class="section">
-        <div class="container members-wrap">
+      <section class="section members-wrap">
+        <div class="container">
           <h2 class="section-title members">Наша команда</h2>
 
           <ul class="member-items list">
