--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,9 @@
     <header>
       <div class="container main-nav">
         <nav class="nav">
-          <a href="" class="logo"><span class="accent">Web</span>Studio</a>
+          <a href="./index.html" class="logo"
+            ><span class="accent">Web</span>Studio</a
+          >
 
           <ul class="site-nav list">
             <li class="item">
@@ -51,24 +53,24 @@
     <main>
       <!-- Герой -->
       <section class="section">
-        <div class="container">
+        <div class="container portfolio-wrap">
           <h1 class="hidden-title">Примеры работ</h1>
 
           <div class="bnt-container">
             <ul class="filter-items list">
-              <li>
+              <li class="item">
                 <button type="button" class="btn-filter current">Все</button>
               </li>
-              <li>
+              <li class="item">
                 <button type="button" class="btn-filter">Веб-сайты</button>
               </li>
-              <li>
+              <li class="item">
                 <button type="button" class="btn-filter">Приложения</button>
               </li>
-              <li>
+              <li class="item">
                 <button type="button" class="btn-filter">Дизайн</button>
               </li>
-              <li>
+              <li class="item">
                 <button type="button" class="btn-filter">Маркетинг</button>
               </li>
             </ul>
@@ -76,7 +78,7 @@
 
           <div class="examples-container">
             <ul class="examples-items list">
-              <li>
+              <li class="item">
                 <a href="" class="link">
                   <img
                     src="./images/web-tech.jpg"
@@ -89,7 +91,7 @@
                 </a>
               </li>
 
-              <li>
+              <li class="item">
                 <a href="" class="link">
                   <img
                     src="./images/desigh-poster.jpg"
@@ -101,7 +103,7 @@
                 </a>
               </li>
 
-              <li>
+              <li class="item">
                 <a href="" class="link">
                   <img
                     src="./images/app-restaurant.jpg"
@@ -113,7 +115,7 @@
                 </a>
               </li>
 
-              <li>
+              <li class="item">
                 <a href="" class="link">
                   <img
                     src="./images/project-prime.jpg"
@@ -125,7 +127,7 @@
                 </a>
               </li>
 
-              <li>
+              <li class="item">
                 <a href="" class="link">
                   <img src="./images/boxes.jpg" alt="коробки" width="370" />
                   <h2 class="heading">Проект Boxes</h2>
@@ -133,7 +135,7 @@
                 </a>
               </li>
 
-              <li>
+              <li class="item">
                 <a href="" class="link">
                   <img
                     src="./images/web-inspirations.jpg"
@@ -145,7 +147,7 @@
                 </a>
               </li>
 
-              <li>
+              <li class="item">
                 <a href="" class="link">
                   <img
                     src="./images/desing-limited.jpg"
@@ -157,7 +159,7 @@
                 </a>
               </li>
 
-              <li>
+              <li class="item">
                 <a href="" class="link">
                   <img
                     src="./images/project-lab.jpg"
@@ -169,7 +171,7 @@
                 </a>
               </li>
 
-              <li>
+              <li class="item">
                 <a href="" class="link">
                   <img
                     src="./images/app-growing.jpg"
