fixed wraps and margins

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 
             <li class="item">
               <img
+                class="image"
                 src="./images/features2.jpg"
                 alt="создание приложений"
                 width="370"
@@ -126,6 +127,7 @@
 
             <li class="item">
               <img
+                class="image"
                 src="./images/features3.jpg"
                 alt="графический дизайн"
                 width="370"
@@ -143,6 +145,7 @@
           <ul class="member-items list">
             <li class="item">
               <img
+                class="image"
                 src="./images/member1.jpg"
                 alt="мужчина в очках"
                 width="270"
@@ -153,6 +156,7 @@
 
             <li class="item">
               <img
+                class="image"
                 src="./images/member2.jpg"
                 alt="девушка в очках"
                 width="270"
@@ -163,6 +167,7 @@
 
             <li class="item">
               <img
+                class="image"
                 src="./images/member3.jpg"
                 alt="улыбающийся мужчина"
                 width="270"
@@ -173,6 +178,7 @@
 
             <li class="item">
               <img
+                class="image"
                 src="./images/member4.jpg"
                 alt="мужчина с бородой в очках"
                 width="270"
