--- a/portfolio.html
+++ b/portfolio.html
@@ -86,8 +86,10 @@
                     alt="фото сайта Технокряк"
                     width="370"
                   />
-                  <h2 class="heading">Технокряк</h2>
-                  <p class="name-filter text">Веб-сайт</p>
+                  <div class="text-wrap">
+                    <h2 class="heading">Технокряк</h2>
+                    <p class="name-filter text">Веб-сайт</p>
+                  </div>
                 </a>
               </li>
 
