created class text-wrap and stylized them

--- a/portfolio.html
+++ b/portfolio.html
@@ -97,11 +97,14 @@
                 <a href="" class="link">
                   <img
                     src="./images/desigh-poster.jpg"
+                    class="image"
                     alt="дизайн постера"
                     width="370"
                   />
-                  <h2 class="heading">Постер New Orlean vs Golden Star</h2>
-                  <p class="name-filter text">Дизайн</p>
+                  <div class="text-wrap">
+                    <h2 class="heading">Постер New Orlean vs Golden Star</h2>
+                    <p class="name-filter text">Дизайн</p>
+                  </div>
                 </a>
               </li>
 
@@ -109,11 +112,14 @@
                 <a href="" class="link">
                   <img
                     src="./images/app-restaurant.jpg"
+                    class="image"
                     alt="приложение для ресторана"
                     width="370"
                   />
-                  <h2 class="heading">Ресторан Seafood</h2>
-                  <p class="name-filter text">Приложение</p>
+                  <div class="text-wrap">
+                    <h2 class="heading">Ресторан Seafood</h2>
+                    <p class="name-filter text">Приложение</p>
+                  </div>
                 </a>
               </li>
 
@@ -121,19 +127,29 @@
                 <a href="" class="link">
                   <img
                     src="./images/project-prime.jpg"
+                    class="image"
                     alt="фото наушники"
                     width="370"
                   />
-                  <h2 class="heading">Проект Prime</h2>
-                  <p class="name-filter text">Маркетинг</p>
+                  <div class="text-wrap">
+                    <h2 class="heading">Проект Prime</h2>
+                    <p class="name-filter text">Маркетинг</p>
+                  </div>
                 </a>
               </li>
 
               <li class="item">
                 <a href="" class="link">
-                  <img src="./images/boxes.jpg" alt="коробки" width="370" />
-                  <h2 class="heading">Проект Boxes</h2>
-                  <p class="name-filter text">Приложение</p>
+                  <img
+                    src="./images/boxes.jpg"
+                    class="image"
+                    alt="коробки"
+                    width="370"
+                  />
+                  <div class="text-wrap">
+                    <h2 class="heading">Проект Boxes</h2>
+                    <p class="name-filter text">Приложение</p>
+                  </div>
                 </a>
               </li>
 
@@ -141,11 +157,14 @@
                 <a href="" class="link">
                   <img
                     src="./images/web-inspirations.jpg"
+                    class="image"
                     alt="монитор с открытым сайтом"
                     width="370"
                   />
-                  <h2 class="heading">Inspiration has no Borders</h2>
-                  <p class="name-filter text">Веб-сайт</p>
+                  <div class="text-wrap">
+                    <h2 class="heading">Inspiration has no Borders</h2>
+                    <p class="name-filter text">Веб-сайт</p>
+                  </div>
                 </a>
               </li>
 
@@ -153,11 +172,14 @@
                 <a href="" class="link">
                   <img
                     src="./images/desing-limited.jpg"
+                    class="image"
                     alt="дизайн издания"
                     width="370"
                   />
-                  <h2 class="heading">Издание Limited Edition</h2>
-                  <p class="name-filter text">Дизайн</p>
+                  <div class="text-wrap">
+                    <h2 class="heading">Издание Limited Edition</h2>
+                    <p class="name-filter text">Дизайн</p>
+                  </div>
                 </a>
               </li>
 
@@ -165,11 +187,14 @@
                 <a href="" class="link">
                   <img
                     src="./images/project-lab.jpg"
+                    class="image"
                     alt="фото лейбла"
                     width="370"
                   />
-                  <h2 class="heading">Проект LAB</h2>
-                  <p class="name-filter text">Маркетинг</p>
+                  <div class="text-wrap">
+                    <h2 class="heading">Проект LAB</h2>
+                    <p class="name-filter text">Маркетинг</p>
+                  </div>
                 </a>
               </li>
 
@@ -177,11 +202,14 @@
                 <a href="" class="link">
                   <img
                     src="./images/app-growing.jpg"
+                    class="image"
                     alt="фото приложения"
                     width="370"
                   />
-                  <h2 class="heading">Growing Business</h2>
-                  <p class="name-filter text">Приложение</p>
+                  <div class="text-wrap">
+                    <h2 class="heading">Growing Business</h2>
+                    <p class="name-filter text">Приложение</p>
+                  </div>
                 </a>
               </li>
             </ul>
