corrected work mistakes

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </section>
 
       <!-- Преимущества -->
-      <section class="section">
+      <section class="section features">
         <div class="container">
           <h2 class="hidden-title">Преимущества</h2>
           <ul class="feature-list list">
@@ -104,7 +104,7 @@
       </section>
 
       <!-- Род деятельности -->
-      <section class="section">
+      <section class="section occupation">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="img-list list">
