--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
       <div class="container main-nav">
         <nav class="nav">
           <a href="./index.html" class="logo"
-            ><span class="accent">Web</span>Studio</a
+            ><span class="accent" lang="en">Web</span>Studio</a
           >
 
           <ul class="site-nav list">
@@ -52,8 +52,8 @@
 
     <main>
       <!-- Герой -->
-      <section class="section">
-        <div class="container portfolio-wrap">
+      <section class="section portfolio-wrap">
+        <div class="container">
           <h1 class="hidden-title">Примеры работ</h1>
 
           <div class="bnt-container">
