--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <body>
     <!-- Шапка сайта -->
-    <header>
+    <header class="header-wrap">
       <div class="container main-nav">
         <nav class="nav">
           <a href="" class="logo"><span class="accent">Web</span>Studio</a>
