--- a/portfolio.html
+++ b/portfolio.html
@@ -17,19 +17,17 @@
   </head>
   <body>
     <!-- Шапка сайта -->
-    <header>
+    <header class="header-wrap">
       <div class="container main-nav">
         <nav class="nav">
-          <a href="./index.html" class="logo"
-            ><span class="accent" lang="en">Web</span>Studio</a
-          >
+          <a href="" class="logo"><span class="accent">Web</span>Studio</a>
 
           <ul class="site-nav list">
             <li class="item">
-              <a href="./index.html" class="link">Студия</a>
+              <a href="./index.html" class="link current">Студия</a>
             </li>
             <li class="item">
-              <a href="./portfolio.html" class="link current">Портфолио</a>
+              <a href="./portfolio.html" class="link">Портфолио</a>
             </li>
             <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
@@ -220,12 +218,12 @@
 
     <!-- Подвал сайта -->
     <footer class="page-footer">
-      <div class="container">
+      <div class="container footer-wrap">
         <a href="" class="logo footer"><span class="accent">Web</span>Studio</a>
 
         <address>
           <ul class="footer-items list">
-            <li>
+            <li class="item">
               <a
                 href="https://goo.gl/maps/wA7wwZKrXkQfANAAA"
                 target="blank"
@@ -235,13 +233,13 @@
               >
             </li>
 
-            <li>
+            <li class="item">
               <a href="mailto:info@example.com" class="link contact"
                 >info@example.com</a
               >
             </li>
 
-            <li>
+            <li class="item">
               <a href="tel:+380991111111" class="link contact"
                 >+38 099 111 11 11</a
               >
