added attribute lang

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 width="270"
               />
               <h3 class="name">Игорь Демьяненко</h3>
-              <p class="text">Product Designer</p>
+              <p lang="en" class="text">Product Designer</p>
             </li>
 
             <li class="item">
@@ -162,7 +162,7 @@
                 width="270"
               />
               <h3 class="name">Ольга Репина</h3>
-              <p class="text">Frontend Developer</p>
+              <p lang="en" class="text">Frontend Developer</p>
             </li>
 
             <li class="item">
@@ -173,7 +173,7 @@
                 width="270"
               />
               <h3 class="name">Николай Тарасов</h3>
-              <p class="text">Marketing</p>
+              <p lang="en" class="text">Marketing</p>
             </li>
 
             <li class="item">
@@ -184,7 +184,7 @@
                 width="270"
               />
               <h3 class="name">Михаил Ермаков</h3>
-              <p class="text">UI Designer</p>
+              <p lang="en" class="text">UI Designer</p>
             </li>
           </ul>
         </div>
