--- a/portfolio.html
+++ b/portfolio.html
@@ -160,7 +160,9 @@
                     width="370"
                   />
                   <div class="text-wrap">
-                    <h2 class="heading">Inspiration has no Borders</h2>
+                    <h2 lang="en" class="heading">
+                      Inspiration has no Borders
+                    </h2>
                     <p class="name-filter text">Веб-сайт</p>
                   </div>
                 </a>
@@ -205,7 +207,7 @@
                     width="370"
                   />
                   <div class="text-wrap">
-                    <h2 class="heading">Growing Business</h2>
+                    <h2 lang="en" class="heading">Growing Business</h2>
                     <p class="name-filter text">Приложение</p>
                   </div>
                 </a>
