--- a/index.html
+++ b/index.html
@@ -194,7 +194,9 @@
     <!-- Подвал сайта -->
     <footer class="page-footer">
       <div class="container footer-wrap">
-        <a href="" class="logo footer"><span class="accent">Web</span>Studio</a>
+        <a href="" lang="en" class="logo footer"
+          ><span class="accent">Web</span>Studio</a
+        >
 
         <address>
           <ul class="footer-items list">
